crates/plotnik-tests/tests/03-analyze/anchors/boundary_anchor_in_alternative_sequence_needs_node.txt
Q = [
  {
    .
    (a)
  }
  (c)
]
------------------ DIAGNOSTICS -------------------
error: anchor needs an enclosing node
 --> query.ptk:3:5
  |
3 |     .
  |     ^
  |
help: move the anchor and its neighboring pattern inside a named node
-------------------- SYMBOLS ---------------------
